feat: test scripts for user role master auth added